--- a/public/_assets/scss/layouts/_site-log.scss
+++ b/public/_assets/scss/layouts/_site-log.scss
@@ -6,6 +6,18 @@
     // min-width: 0;
     @include text-size(small);
 
+    &__entry {
+        display: flex;
+
+        flex-direction: column;
+        gap: var(--spacing-025);
+
+        &:not(:first-child) {
+            border-top: 1px dotted var(--color-base);
+            padding-top: var(--spacing-075);
+        }
+    }
+
     &__date {
         @include text-style(serif, italic);
         @include text-size(small);
@@ -53,6 +65,12 @@
     @include for-viewport-size(phone) {
         border-top: 1px dashed var(--color-base);
         padding: var(--spacing-100) 0;
+
+        &__entry {
+            &:nth-child(n + 4) {
+                display: none;
+            }
+        }
     }
 
     @include for-viewport-size(desktop) {
